[project]
name = "tasks"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = ["fastapi>=0.129.1", "httpx>=0.28.1", "uvicorn>=0.41.0"]

[dependency-groups]
dev = [
  "bandit>=1.9.3",
  "black>=26.1.0",
  "flake8>=7.3.0",
  "isort>=8.0.0",
  "pytest>=9.0.2",
  "pytest-cov>=7.0.0",
  "ruff>=0.15.2",
]

[tool.ruff]
line-length = 120
target-version = "py313"

[tool.ruff.lint]
# Pyflakes (F), pycodestyle (E, W), isort (I), bandit (S)
select = ["F", "E", "W", "I", "S"]
ignore = []
